# ClAuDHDbot

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.beads/: issues.jsonl  metadata.json
.github/workflows/: ci.yml  release.yml
config/: default.toml  default.toml.example  mcp_servers.toml  mcp_servers.toml.example
docs/: 00-spec.md  01-discord-setup.md
migrations/: 20260404_create_tasks.sql  20260405_create_schedules.sql
src/: config.rs  main.rs
src/bot/: mod.rs
src/bot/commands/: ask.rs  mod.rs  ping.rs  schedule.rs  task.rs  tools.rs
src/db/: mod.rs  schedules.rs  tasks.rs
src/digest/: mod.rs
src/llm/: claude.rs  mod.rs  ollama.rs  openai.rs
src/mcp/: client.rs  mod.rs
src/models/: mod.rs  schedule.rs  task.rs
src/scheduler/: mod.rs
