[package]
name = "claudhdbot"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Discord
poise = "0.6"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
dotenvy = "0.15"
dirs = "5"

# HTTP client (for LLM API calls)
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"

# MCP client
rmcp = { version = "1.3", features = ["client", "transport-child-process"] }

# Scheduler
tokio-cron-scheduler = "0.13"
uuid = "1"
